--- a/GeographyProject.html
+++ b/GeographyProject.html
@@ -11,16 +11,16 @@
 
 <body>
     <header>
-        <h1>Ancient Egypt and the Nile</h1>
+        <h1>Ancient Egypt and the Desert</h1>
     </header>
 
     <section id="question">
-        <h2>Why did the Nile help Ancient Egypt?</h2>
+        <h2>Why did the Desert help Ancient Egypt?</h2>
         <p>Insert a brief introduction or summary of your project here.</p>
     </section>
 
     <section id="facts">
-        <h2>10 Facts about the Nile and Ancient Egypt</h2>
+        <h2>10 Facts about the Desert and Ancient Egypt</h2>
         <ul id="factList">
             <!-- jQuery will dynamically populate this list -->
         </ul>
