--- a/GeographyProject.html
+++ b/GeographyProject.html
@@ -7,6 +7,8 @@
     <title>Ancient Egypt and the Nile</title>
     <!-- Add your CSS links or styles here -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <link rel="stylesheet" href="GeographyProject.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap">
 </head>
 
 <body>
