--- a/GeographyProject.html
+++ b/GeographyProject.html
@@ -23,6 +23,14 @@
         </ul>
     </section>
 
+    <div id="slideshow-container">
+        <div class="slide">
+            <img src="image1.jpg" alt="Caption 1">
+            <div class="caption">Caption 1</div>
+        </div>
+        <!-- Additional slides will be dynamically added here -->
+    </div>
+
     <section id="question">
         <h2>Why did the Desert help Ancient Egypt?</h2>
         <p>Insert a brief introduction or summary of your project here.</p>
