--- a/GeographyQuiz.html
+++ b/GeographyQuiz.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ancient Egypt Quiz</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- Add your JavaScript link or script here -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script defer src="quiz.js"></script>
+</head>
+
+<body>
+    <header>
+        <h1>Ancient Egypt Quiz</h1>
+    </header>
+
+    <section id="quizContainer">
+        <!-- Quiz questions will be dynamically added here -->
+    </section>
+</body>
+
+</html>
